Se corrige JWT validation, tokens funcionales